--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "@cloudflare/workers-types": "^4.20250801.0",
         "typescript": "^5.7.3",
         "vitest": "^2.1.9",
-        "wrangler": "4.24.3"
+        "wrangler": "^4.40.2"
     },
     "dependencies": {
         "@pinata/sdk": "^2.1.0",
