--- a/wrangler.toml
+++ b/wrangler.toml
@@ -75,6 +75,11 @@ crons = ["*/1 * * * *"]
 binding = "PIPERX_KV"
 id = "40270dad43394d7e96addae019061c75"
 
+[[d1_databases]]
+binding = "DB"                       # 代码里用 c.env.DB 访问
+database_name = "piperx-swaps"       # D1 数据库的名字
+database_id = "xxxx-xxxx-xxxx-xxxx"  # `wrangler d1 list` 里能查到
+
 # Bind an mTLS certificate. Use to present a client certificate when communicating with another service.
 # Docs: https://developers.cloudflare.com/workers/wrangler/configuration/#mtls-certificates
 # [[mtls_certificates]]
