--- a/tokenSubgraph/subgraph.yaml
+++ b/tokenSubgraph/subgraph.yaml
@@ -10,7 +10,7 @@ dataSources:
     source:
       address: "0x6D3e2f58954bf4E1d0C4bA26a85a1b49b2e244C6"
       abi: UniswapV2Factory
-      startBlock: 1000000
+      startBlock: 749000
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
@@ -33,7 +33,7 @@ dataSources:
     source:
       address: "0xb8c21e89983B5EcCD841846eA294c4c8a89718f1"
       abi: UniswapV3Factory
-      startBlock: 1000000
+      startBlock: 749000
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
@@ -56,7 +56,7 @@ dataSources:
     source:
       address: "0xa111dDbE973094F949D78Ad755cd560F8737B7e2"
       abi: UniswapV3Factory
-      startBlock: 1000000
+      startBlock: 749000
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
