--- a/token-prices-swap-Subgraph/subgraph.yaml
+++ b/token-prices-swap-Subgraph/subgraph.yaml
@@ -10,7 +10,7 @@ dataSources:
     source:
       address: "0x6D3e2f58954bf4E1d0C4bA26a85a1b49b2e244C6"
       abi: UniswapV2Factory
-      startBlock: 9000000
+      startBlock: 749000
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
@@ -31,7 +31,7 @@ dataSources:
     source:
       address: "0xb8c21e89983B5EcCD841846eA294c4c8a89718f1"
       abi: UniswapV3Factory
-      startBlock: 9000000
+      startBlock: 749000
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
