--- a/tokenSubgraph/subgraph.yaml
+++ b/tokenSubgraph/subgraph.yaml
@@ -72,3 +72,24 @@ dataSources:
         - event: PoolCreated(indexed address,indexed address,indexed uint24,int24,address)
           handler: handlePoolCreated
       file: ./src/mappings/uniswap-v3-factory.ts
+      
+templates:
+  - name: TokenTemplate
+    kind: ethereum/contract
+    network: story
+    source:
+      abi: ERC20
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.6
+      language: wasm/assemblyscript
+      entities:
+        - HolderBalance
+        - Holder
+      abis:
+        - name: ERC20
+          file: ./abis/ERC20.abi.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+      file: ./src/mappings/token-template.ts
